--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-community/geolocation": "^3.2.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
@@ -23,6 +24,7 @@
     "react": "18.2.0",
     "react-native": "^0.73.1",
     "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-incall-manager": "4.0.1",
     "react-native-leaflet-view": "^0.1.2",
     "react-native-pager-view": "^6.2.3",
